<resources>
    <string name="app_name">AndroidRobot</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>

    <!--College Student-->
    <string name="college_mode_code">编程模式</string>
    <string name="college_mode_graph">流程图模式</string>
    <string name="college_mode_drag">拖拽模式</string>

    <string name="bluetooth_setting">蓝牙设置</string>
    <string name="view_profile">我的账号</string>

    <string name="graph_1">流程图 - Q1</string>
    <string name="graph_2">流程图 - Q2</string>
    <string name="graph_3">流程图 - Q3</string>
    <string name="graph_4">流程图 - Q4</string>

    <string name="drag_1">拖拽 - Q1</string>
    <string name="drag_2">拖拽 - Q2</string>
    <string name="drag_3">拖拽 - Q3</string>
    <string name="drag_4">拖拽 - Q4</string>

    <string name="code_1">编程 - Q1</string>
    <string name="code_2">编程 - Q2</string>
    <string name="code_3">编程 - Q3</string>
    <string name="code_4">编程 - Q4</string>

    <string name="drag_help_msg">前进：Car.forward(距离/米)\n后退：Car.backward(距离/米)\n
                            旋转：Car.rotate(方向：right/left, 角度/deg)\n
                            暂停：Car.pause(时间/秒)\n
                            发出声音：Car.sing(次数)\n
                            循环：repeat(次数)\n
                            判断日期：if(Today == 英文日期)\n
    </string>

    <string name="graph_help_msg">前进：Car.forward(距离/米)\n后退：Car.backward(距离/米)\n
                            右转：Car.right(角度/deg)\n左转：Car.left(角度/deg)\n
                            暂停：Car.pause(时间/秒)\n
                            发出声音：Car.sing()\n
                            循环：if Time &lt; (次数)\n
                            判断日期：if(Today == (1~7))\n
    </string>

    <string name="code_help_msg">前进：Car.forward(距离/米)\n后退：Car.backward(距离/米)\n
                            旋转：Car.rotate(方向：right/left, 角度/deg)\n
                            暂停：Car.pause(时间/秒)\n
                            发出声音：Car.sing(次数)\n
                            循环：repeat(次数)\n
                            判断日期：if(Today == 英文日期)\n
    </string>

</resources>
